# Depth-Image-Processing

./: CMakeLists.txt  LICENSE  README.md
applications/: CMakeLists.txt  copy_dll.cmake  copy_file.cmake  copy_folder.cmake
applications/camera_capture/: CMakeLists.txt  camera_capture.cpp  includes.cmake
applications/camera_viewer/: CMakeLists.txt  camera_viewer.cpp  install.cmake
applications/depth_capture/: CMakeLists.txt  depth_capture.cpp
applications/face_detection/: CMakeLists.txt  face_detection.cpp  includes.cmake  install.cmake
applications/face_modeling/: CMakeLists.txt  face_modeling.cpp  includes.cmake  install.cmake
applications/object_modeling/: CMakeLists.txt  includes.cmake  install.cmake  object_modeling.cpp
cameras/: CMakeLists.txt  includes.cmake
cameras/include/dip/cameras/: camera.h  dumpfile.h  primesense.h  softkinetic.h
cameras/src/: dumpfile.cpp  primesense.cpp  softkinetic.cpp
cmake/modules/: FindDIP.cmake  FindDepthSense.cmake  FindEigen.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLUT.cmake  FindOpenNI2.cmake
common/: CMakeLists.txt
common/include/dip/common/: distance.h  error.h  integralimage.h  macros.h  memory.h  reduction.h  types.h
common/src/: distance.cpp  error.cu  integralimage.cpp  memory.cu  reduction.cu
filters/: CMakeLists.txt
filters/include/dip/filters/: bilateral.h  threshold.h  variance.h
filters/src/: bilateral.cpp  bilateral.cu  threshold.cpp  threshold.cu  variance.cpp  variance.cu
io/: CMakeLists.txt  includes.cmake
io/include/dip/io/: hdf5dumper.h  hdf5wrapper.h  objfile.h
io/src/: hdf5dumper.cpp  hdf5wrapper.cpp  objfile.cpp
point_cloud/: CMakeLists.txt
point_cloud/include/dip/point_cloud/: backprojection.h  centroid.h
point_cloud/src/: backprojection.cpp  backprojection.cu  centroid.cpp  centroid.cu
projects/: CMakeLists.txt
projects/include/dip/projects/: facemodeling.h  objectmodeling.h
projects/src/: facemodeling.cpp  objectmodeling.cpp
registration/: CMakeLists.txt  includes.cmake
registration/include/dip/registration/: icp.h
registration/src/: icp.cpp  icp.cu
sampling/: CMakeLists.txt
sampling/include/dip/sampling/: downsample.h
sampling/src/: downsample.cpp  downsample.cu
segmentation/: CMakeLists.txt
segmentation/include/dip/segmentation/: connectedcomponents.h  facemasker.h  headsegmenter.h
segmentation/src/: connectedcomponents.cpp  facemasker.cpp  headsegmenter.cpp
surface/: CMakeLists.txt
surface/include/dip/surface/: marchingcubes.h  mesh.h  raycasting.h  volumetric.h  voxel.h
surface/src/: marchingcubes.cpp  raycasting.cpp  raycasting.cu  volumetric.cpp  volumetric.cu
visualization/: CMakeLists.txt  includes.cmake
visualization/include/dip/visualization/: colorize.h
visualization/src/: colorize.cpp
